fix: prevent icon overlap in navigation bar

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -7,6 +7,7 @@
     top: 0;
     background-color: $clr-mantle;
     padding: .7rem;
+    z-index: 1;
 
     &__logo {
         margin-left: .8rem;
